Nov 28, 2002: Jordi Mallach <jordi@sindominio.net>
- Updated Catalan and Spanish translations.

Nov 22, 2002: Jordi Mallach <jordi@sindominio.net>
- port Ludwig's setlocale fix to rcon.c.

Nov 21, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- store when a server was last up, display this date in red if it's more than
  three days older than the last refresh. Necessary change to ~/.qf/srvinfo.gz
  is backward and forward compatible.
- util function timet2string, it has yet to be verified this one works on
  none-linux system too.
- use setlocale(LC_ALL, "");
- fix __FUNCTION__ warnings

Nov 20, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- fix wrong pointer passed to userver_ref

Nov 17, 2002: Jordi Mallach <jordi@sindominio.net>
- Initialize i18n for xqf-rcon.

Nov 16, 2002: Alex Burger <alex_b@users.sourceforge.net>
- Changed version to 0.9.10.1

Nov 16, 2002: Alex Burger <alex_b@users.sourceforge.net>
- Changed version to 0.9.10

Nov 09, 2002: Jordi Mallach <jordi@sindominio.net>
- Fix typos in Catalan translation.

Nov 07, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- make cl_punkbuster method usable for any game, make it configurable for wolf
- use protocol 60 by default for RTCW

Nov 06, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- added protocol 60 for RTCW 1.4 to preferences
- added -lncurses to readline check

Nov 05, 2002: Jordi Mallach <jordi@sindominio.net>
- Update QW master list, remove non-working and add QuakeForge's.

Nov 05, 2002: Jordi Mallach <jordi@sindominio.net>
- Updated Catalan and Spanish translations.

Nov 5, 2002: Alex Burger <alex_b@users.sourceforge.net>
- Add parameter to play_sound to force playing even if sound is disabled.
  Used by Test buttons to Preferences - Sound page

Nov 05, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- use gtk functions instead of spaces to make test button look nice
- update german translation

Nov 3, 2002: Alex Burger <alex_b@users.sourceforge.net>