@@ -1,3 +1,6 @@
+Dec 05, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
+- display RTCW voteflags like dmflags
+
 Nov 28, 2002: Jordi Mallach <jordi@sindominio.net>
 - Updated Catalan and Spanish translations.
 
